[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Themes/themechoicetheme.tres" type="Theme" id=1]
[ext_resource path="res://Scene/SelectButton.gd" type="Script" id=2]
[ext_resource path="res://Scene/Createdthemecontainer.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.270588, 0.219608, 0.054902, 1 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Createdthemecontainer" type="Panel"]
margin_top = 1.0
margin_right = 350.0
margin_bottom = 71.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )

[node name="SelectButton" type="Button" parent="."]
margin_right = 347.0
margin_bottom = 70.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
script = ExtResource( 2 )

[node name="Themename" type="RichTextLabel" parent="."]
margin_left = 29.0
margin_top = 18.0
margin_right = 193.0
margin_bottom = 60.0
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "PLACEHOLDER"
text = "PLACEHOLDER"
deselect_on_focus_loss_enabled = false

[connection signal="mouse_entered" from="SelectButton" to="." method="_on_SelectButton_mouse_entered"]
[connection signal="mouse_exited" from="SelectButton" to="." method="_on_SelectButton_mouse_exited"]
[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
